# non-assistant-sampling

./: .gitignore  CLAUDE.md  get_usage.py  pyproject.toml  sample_llm_response_mask.py  sample_llm_response_single.py  sample_llm_response_single_sonnet.py
configs/: judge_harm_awareness.yaml  judge_lie_awareness.yaml  sample_consistency_sandbagging.yaml  sample_mask.yaml  sample_pressure.yaml  sample_user_persona.yaml  sandbagging.yaml  sandbagging_reverse.yaml  search_censored.yaml
specs/: search_censored_chinese.md
src/harm_pressure/: explore_harm_data.py  plot_accuracy.py
src/harm_pressure_anthropic/: filter_harm_pressure_indices.py  judge_harm_awareness.py  models.py  plot_accuracy.py  plot_judge_results.py  sample_llm_response_harm_pressure.py  sample_llm_response_harm_pressure_deepseek.py  sample_llm_response_harm_pressure_oss.py  sample_llm_response_harm_pressure_sonnet.py  sample_user_persona.py
src/harm_pressure_cadenza/: explore_harm_liars_bench.py  sample_llm_response_harm_pressure.py
src/harmful_sampling/: sample_prefill.py
src/mask/: encoding_dsv32.py  explore_mask_data.py  filter_sycophancy_indices.py  invalid_responses.json  judge_lie_awareness.py  models.py  plot_accuracy.py  plot_judge_results.py  sample_llm_response_mask.py  sample_llm_response_mask_deepseekv3.py  sample_llm_response_mask_kimik2.py  sample_llm_response_mask_kimik2_user.py  sample_llm_response_mask_sonnet.py  sample_user_persona.py  test_deepseek_tokenizer.py
src/mask_followup/: sample_llm_response_mask_kimik2_user.py
src/sandbagging/: .gitignore  README.md  pyproject.toml  (+1 more)
(+25 files in other folders)
